[gd_scene load_steps=13 format=3 uid="uid://ccv7strpbey65"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ct643"]
[ext_resource type="Texture2D" uid="uid://d3v8uyt8cvwq3" path="res://icon.svg" id="2_6jdli"]
[ext_resource type="Shader" path="res://shaders/color.gdshader" id="3_mol7y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8jujv"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tdvl4"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evgdq"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_egect"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(1, 0.403922, 0, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gvvm8"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(1, 0.921569, 0.12549, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1a5e1"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(0, 0.666667, 0, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ij1pw"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(0, 0.0784314, 0.921569, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w5ktj"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(0.454902, 0.0627451, 0.576471, 1)
shader_parameter/mixture = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2e621"]
shader = ExtResource("3_mol7y")
shader_parameter/color = Color(1, 0.262745, 0.709804, 1)
shader_parameter/mixture = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ct643")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 72.0
grow_horizontal = 2
texture_normal = ExtResource("2_6jdli")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -280.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32
alignment = 1

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_8jujv")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_tdvl4")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_evgdq")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_egect")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton5" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_gvvm8")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton6" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_1a5e1")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton7" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_ij1pw")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton8" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_w5ktj")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[node name="TextureButton9" type="TextureButton" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_2e621")
layout_mode = 2
texture_normal = ExtResource("2_6jdli")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_white_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="." method="_on_texture_button_black_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton3" to="." method="_on_texture_button_red_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton4" to="." method="_on_texture_button_orange_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton5" to="." method="_on_texture_button_yellow_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton6" to="." method="_on_texture_button_green_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton7" to="." method="_on_texture_button_blue_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton8" to="." method="_on_texture_button_purple_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton9" to="." method="_on_texture_button_pink_pressed"]
